# nephele

./: ProjectHome.md  QuickStart.md  README.md
ccv2/ant/: build.xml  ivysettings.xml
ccv2/src/resources/: example.properties
ccv2/src/scripts/: ccv-config.sh  classifier.sh  colorScales.py  compare.sh  json2weka.py  scatterplot.sh
ccv2/test/data/: HA_HolmesShortSeqs.fasta
hadoop/ant/: build-notes.txt  build.xml  ivysettings.properties  ivysettings.xml
hadoop/maven/: pom.xml
hadoop/maven/assemblies/: distribution-assembly.xml
panjo/dta/: tstNS.mat
panjo/report/: panjo.bbl  panjo.bib  panjo.lof  panjo.out
panjo/report/R/: .Rhistory  drawPlots.R  model.R
panjo/report/dta/: dta_big.csv
panjo/report/matrices/: fig_mat2.fig
panjo/src/: .gdb_history  .in  BUILDING  config.h.in  panjo-lib.c  panjo-lib.h  panjo.c  pp
panjo/src/.deps/: panjo.Po
panjo/src/R/: .Rhistory  nj.R  upgma.R
panjo/src/autom4te.cache/: output.0  traces.1  traces.2
panjo/src/m4/: acx_mpi.m4
trunk/: LICENSE.txt
trunk/ccv2/: CHANGES.txt
trunk/ccv2/ant/: build-notes.txt  build.xml  ivy.xml  svn-revision.sh
trunk/ccv2/src/resources/: ccv_schema.sql  examples.sql  log4j.properties
trunk/ccv2/src/scripts/: addClusters2Json.py  ccv-config.sh  ccv.sh  rdl.sh  (+2 more)
trunk/hadoop/ant/: build-errors.txt  build-notes.txt  ivy.xml
trunk/panjo/dta/: grappa.mat  make_big.sh  run-serial.sh  run.sh  tstA.mat  tstAA.mat  tstAB.mat
trunk/panjo/report/: model.txt  panjo.aux  panjo.blg  panjo.tex  panjo.toc  sizetest  test.c
trunk/panjo/src/: Makefile.am  Makefile.in  aclocal.m4  config.h  configure  configure.ac  panjo-lib.c  panjo-lib.h  panjo.c  remap_names.py
trunk/panjo/src/autom4te.cache/: output.1  requests  traces.0
wiki/: QuickStart.wiki
(+100 files in other folders)
